--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -90,10 +90,10 @@
   // Textarea
   --#{$form-control}--textarea--Width: var(--#{$form-control}--Width);
   --#{$form-control}--textarea--Height: auto;
-  --#{$form-control}--textarea--PaddingBlockStart: calc(-1 * var(--#{$form-control}--OutlineOffset));
-  --#{$form-control}--textarea--PaddingBlockEnd: calc(-1 * var(--#{$form-control}--OutlineOffset));
-  --#{$form-control}--textarea--PaddingInlineEnd: calc(-1 * var(--#{$form-control}--OutlineOffset));
-  --#{$form-control}--textarea--PaddingInlineStart: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingBlockStart--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingBlockEnd--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingInlineEnd--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingInlineStart--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
 
   // Form control icon
   --#{$form-control}__icon--Color: var(--pf-t--global--icon--color--regular);
@@ -176,10 +176,10 @@
   }
 
   &.pf-m-textarea {
-    padding-block-start: var(--#{$form-control}--textarea--PaddingBlockStart);
-    padding-block-end: var(--#{$form-control}--textarea--PaddingBlockEnd);
-    padding-inline-start: var(--#{$form-control}--textarea--PaddingInlineStart);
-    padding-inline-end: var(--#{$form-control}--textarea--PaddingInlineEnd);
+    padding-block-start: var(--#{$form-control}--textarea--PaddingBlockStart--offset);
+    padding-block-end: var(--#{$form-control}--textarea--PaddingBlockEnd--offset);
+    padding-inline-start: var(--#{$form-control}--textarea--PaddingInlineStart--offset);
+    padding-inline-end: var(--#{$form-control}--textarea--PaddingInlineEnd--offset);
    
     &.pf-m-success,
     &.pf-m-warning,
@@ -188,10 +188,10 @@
     }
 
     > textarea {
-      padding-block-start: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--textarea--PaddingBlockStart));
-      padding-block-end: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--textarea--PaddingBlockEnd));
-      padding-inline-start: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--textarea--PaddingInlineStart));
-      padding-inline-end: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--textarea--PaddingInlineEnd) + var(--#{$form-control}--m-status--PaddingInlineEnd--offset, 0));  
+      padding-block-start: calc(var(--#{$form-control}--PaddingBlockStart) - var(--#{$form-control}--textarea--PaddingBlockStart--offset));
+      padding-block-end: calc(var(--#{$form-control}--PaddingBlockEnd) - var(--#{$form-control}--textarea--PaddingBlockEnd--offset));
+      padding-inline-start: calc(var(--#{$form-control}--PaddingInlineStart) - var(--#{$form-control}--textarea--PaddingInlineStart--offset));
+      padding-inline-end: calc(var(--#{$form-control}--PaddingInlineEnd) - var(--#{$form-control}--textarea--PaddingInlineEnd--offset) + var(--#{$form-control}--m-status--PaddingInlineEnd--offset, 0));  
       outline-offset: 0;
       scrollbar-gutter: stable;
     }
