feat(FormControl): refine textarea styles (#7051)
* feat(FormControl): refine textarea styles

* fix(TextArea): rename variables and use control type

* fix(TextArea): move around some variables

* Apply suggestions from code review

Co-authored-by: Michael Coker <35148959+mcoker@users.noreply.github.com>

---------

Co-authored-by: Sarah Rambacher <srambach@redhat.com>
Co-authored-by: Michael Coker <35148959+mcoker@users.noreply.github.com>

--- a/src/patternfly/components/FormControl/form-control.hbs
+++ b/src/patternfly/components/FormControl/form-control.hbs
@@ -9,6 +9,7 @@
   {{#if form-control--IsWarning}} pf-m-warning{{/if}}
   {{#if form-control--IsError}} pf-m-error{{/if}}
   {{#if form-control--HasIcon}} pf-m-icon{{/if}}
+  {{#ifEquals controlType "textarea"}} pf-m-textarea{{/ifEquals}}
   {{#if form-control--modifier}} {{form-control--modifier}}{{/if}}
 ">
   {{#ifEquals controlType "select"}}
