--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -93,6 +93,10 @@
   // Textarea
   --#{$form-control}--textarea--Width: var(--#{$form-control}--Width);
   --#{$form-control}--textarea--Height: auto;
+  --#{$form-control}--textarea--PaddingBlockStart--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingBlockEnd--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingInlineEnd--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingInlineStart--offset: calc(-1 * var(--#{$form-control}--OutlineOffset));
 
   // Form control icon
   --#{$form-control}__icon--Color: var(--pf-t--global--icon--color--regular);
@@ -158,15 +162,12 @@
     background-color: transparent;
     border: none;
     border-radius: var(--#{$form-control}--BorderRadius);
+    outline-offset: var(--#{$form-control}--OutlineOffset);
 
     // stylelint-disable
     -moz-appearance: none;
     -webkit-appearance: none;
     // stylelint-enable
-
-    &:focus {
-      outline-offset: var(--#{$form-control}--OutlineOffset);
-    }
   }
 
   > ::placeholder {
@@ -175,6 +176,28 @@
 
   > :is(input, select) {
     text-overflow: ellipsis;
+  }
+
+  &.pf-m-textarea {
+    padding-block-start: var(--#{$form-control}--textarea--PaddingBlockStart--offset);
+    padding-block-end: var(--#{$form-control}--textarea--PaddingBlockEnd--offset);
+    padding-inline-start: var(--#{$form-control}--textarea--PaddingInlineStart--offset);
+    padding-inline-end: var(--#{$form-control}--textarea--PaddingInlineEnd--offset);
+   
+    &.pf-m-success,
+    &.pf-m-warning,
+    &.pf-m-error {
+      --#{$form-control}--m-status--PaddingInlineEnd--offset: calc(var(--#{$form-control}__icon--FontSize) + var(--#{$form-control}--ColumnGap)); 
+    }
+
+    > textarea {
+      padding-block-start: calc(var(--#{$form-control}--PaddingBlockStart) - var(--#{$form-control}--textarea--PaddingBlockStart--offset));
+      padding-block-end: calc(var(--#{$form-control}--PaddingBlockEnd) - var(--#{$form-control}--textarea--PaddingBlockEnd--offset));
+      padding-inline-start: calc(var(--#{$form-control}--PaddingInlineStart) - var(--#{$form-control}--textarea--PaddingInlineStart--offset));
+      padding-inline-end: calc(var(--#{$form-control}--PaddingInlineEnd) - var(--#{$form-control}--textarea--PaddingInlineEnd--offset) + var(--#{$form-control}--m-status--PaddingInlineEnd--offset, 0));  
+      outline-offset: 0;
+      scrollbar-gutter: stable;
+    }
   }
 
   &.pf-m-readonly {
