--- a/src/patternfly/demos/NotificationDrawer/notification-drawer-template.hbs
+++ b/src/patternfly/demos/NotificationDrawer/notification-drawer-template.hbs
@@ -11,7 +11,7 @@
   {{#> page-drawer}}
     {{#> drawer}}
       {{#> drawer-main}}
-        {{#> drawer-content}}
+        {{#> drawer-content drawer-content--NoBody=true}}
           {{#> page-main}}
             {{> page-template-breadcrumb}}
             {{> page-template-title}}
