fix(label-group): truncate labels within label-group

--- a/src/patternfly/components/Label/examples/Label.css
+++ b/src/patternfly/components/Label/examples/Label.css
@@ -11,3 +11,15 @@
 #ws-core-c-label-overflow .pf-v6-c-label {
   margin: 4px;
 }
+
+#ws-core-c-label-labels-with-truncation .ws-preview-html { 
+  max-width: 320px;
+}
+
+.pf-v6-c-label-truncate--example {
+  max-width: 100%;
+  padding: var(--pf-t--global--spacer--sm);
+  overflow: auto;
+  resize: horizontal;
+  border: var(--pf-t--global--border--width--box--default) solid var(--pf-t--global--border--color--default);
+}
