chore(layouts): example updates

--- a/src/patternfly/layouts/Level/examples/Level.css
+++ b/src/patternfly/layouts/Level/examples/Level.css
@@ -3,8 +3,7 @@
   flex-wrap: wrap;
   min-height: 160px;
 }
-.ws-core-l-level .pf-v6-l-level__item,
-.ws-core-l-level .pf-v6-l-level {
+.ws-core-l-level :is(.pf-v6-l-level, .pf-v6-l-level__item, .pf-v6-l-level > *) {
   padding: var(--pf-t--global--spacer--sm);
   border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
