fix(Page): limit width on section and example cleanup (#7224)

--- a/src/patternfly/components/Page/page-main-container.hbs
+++ b/src/patternfly/components/Page/page-main-container.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}page__main-container{{#if page-main-container--modifier}} {{page-main-container--modifier}}{{/if}}" tabindex="-1"
+<div class="{{pfv}}page__main-container{{#if page-main-container--modifier}} {{page-main-container--modifier}}{{/if}}{{#if page-main-container--IsFilled}} pf-m-fill{{/if}}" tabindex="-1"
   {{#if page-main-container--attribute}}
     {{{page-main-container--attribute}}}
   {{/if}}>
