--- a/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
@@ -1,7 +1,7 @@
 {{!-- TODO: update toolbar content when all other components are ready --}}
 {{#> toolbar-content-section}}
   {{#if menu-template--HasContextSelector}}
-    {{#> toolbar-item}}
+    {{#> toolbar-item toolbar-item--modifier="pf-m-align-self-center"}}
       {{> masthead-template-context-selector}}
     {{/toolbar-item}}
   {{/if}}
