chore(holiday): added graphs

--- a/src/patternfly/demos/Card/templates/card-demo--chart.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--chart.hbs
@@ -1,6 +1,6 @@
 <div class="ws-chart">
   {{#if card-demo--chart--IsLineChart2}}
-    <img src="/assets/images/img_line-chart-2.png" alt="Line chart" />
+<svg width="400" height="100" role="img" aria-labelledby="victory-container-1197-title" aria-describedby="victory-container-1197-desc" viewBox="0 0 400 100" style="width: 100%; height: 100%; pointer-events: all;"><title id="victory-container-1197-title">Sparkline chart example</title><desc id="victory-container-1197-desc">Average number of pets</desc><g clip-path="url(#victory-clip-1198)" style="height: 100%; width: 100%;"><defs><clipPath id="victory-clip-1198"><rect vector-effect="non-scaling-stroke" x="0" y="0" width="400" height="100"></rect></clipPath></defs><path d="M0,66.667L133.333,55.556L266.667,11.111L400,33.333L400,100L266.667,100L133.333,100L0,100Z" role="presentation" shape-rendering="auto" style="fill: var(--pf-v6-chart-theme--green--ColorScale--100, #63993d); width: 50px; fill-opacity: 0.3; stroke-width: 2; stroke: var(--pf-v6-chart-theme--green--ColorScale--100, #63993d);"></path></g></svg>
   {{else if card-demo--chart--IsThresholdChart}}
     <img src="/assets/images/img_chart-threshold.png" alt="Threshold chart" />
   {{else if card-demo--chart--IsStackChart}}
