--- a/src/patternfly/patternfly.scss
+++ b/src/patternfly/patternfly.scss
@@ -1,3 +1,4 @@
+@use './patternfly-charts';
 @use './assets/fontawesome/variables' with (
   $pf-v6-global--disable-fontawesome: false // change to true to omit font-awesome
 );
